--- a/elvis3d/exam.5.effect/5.decal.1.html
+++ b/elvis3d/exam.5.effect/5.decal.1.html
@@ -30,8 +30,8 @@
         //레이 캐스터
         var raycaster = Smgr.raycaster;
 
-        var cast_position = new THREE.Vector3(5,0,0) //데칼을 발사할위치
-        var cast_dir =  new THREE.Vector3(-1,0,0) //데칼이 발사되는 방향
+        var cast_position = new THREE.Vector3(0,0,5) //데칼을 발사할위치
+        var cast_dir =  new THREE.Vector3(0,0,-1) //데칼이 발사되는 방향
 
         raycaster.set( cast_position, cast_dir); //데칼을 만드는 광선
 
