--- a/elvis3d/tutorial/1.1.fullscreen.html
+++ b/elvis3d/tutorial/1.1.fullscreen.html
@@ -9,8 +9,17 @@
     <script src="../libs/threejs/js/controls/OrbitControls.js"></script>
     <script src="../libs/ramb3d/core.js"></script>
 
+    <style>
+
+        body {
+            margin: 0px; /* 화면 여백 제거   */
+            overflow: hidden /* 스크롤바 없애기  */
+        }
+
+    </style>
+
 </head>
-<body style="margin: 0px;" >
+<body>
 
 <script>
 
