--- a/elvis3d/tutorial/1.2.window.html
+++ b/elvis3d/tutorial/1.2.window.html
@@ -16,7 +16,7 @@
     <script src='../libs/threejs/three.js'></script>
     <script src="../libs/threejs/js/controls/OrbitControls.js"></script>
 
-    <script src="../libs/ramb3d/core.js"></script>
+    <script src="../libs/elvis5/core.js"></script>
 
 
 
