--- a/elvis3d/tutorial/3.1.texture.basic.html
+++ b/elvis3d/tutorial/3.1.texture.basic.html
@@ -10,10 +10,10 @@
     <title>texture basic</title>
     <script src='../libs/threejs/three.js'></script>
     <script src="../libs/threejs/js/controls/OrbitControls.js"></script>
-    <script src="../libs/ramb3d/core.js"></script>
+    <script src="../libs/elvis5/core.js"></script>
 
 </head>
-<body style="margin: 0px;" >
+<body style="margin: 0px;overflow: hidden;" >
 
 
 <script>
