--- a/elvis3d/tutorial/5.move_object.html
+++ b/elvis3d/tutorial/5.move_object.html
@@ -9,14 +9,13 @@
 
     <title> basic </title>
 
-    <script src="../libs/backbone/underscore.js"></script>
-    <script src='../libs/jquery-2.0.3.min.js'></script>
+    <!--<script src="../libs/backbone/underscore.js"></script>-->
+    <script src='../libs/extra/jquery-2.0.3.min.js'></script>
 
 
     <script src='../libs/threejs/three.js'></script>
-    <script src='../libs/threejs/CSS3DRenderer.js'></script>
-    <script src="../libs/ramb3d/core.js"></script>
-
+    <!--<script src='../libs/threejs/CSS3DRenderer.js'></script>-->
+    <script src="../libs/elvis5/core.js"></script>
     <script src="../libs/threejs/js/controls/OrbitControls.js"></script>
 
 </head>
