--- a/elvis3d/exam.fbx/1.html
+++ b/elvis3d/exam.fbx/1.html
@@ -10,7 +10,7 @@
 
     <script src="./FBXLoader.js"></script>
 
-    <script src="../libs/ramb3d/core.js"></script>
+    <script src="../libs/elvis5/core.js"></script>
     <script src="../libs/threejs/gbox_ext/loader.js"></script>
     <script src="animation_mixer.js"></script>
 
