--- a/elvis3d/exam.3.math/2.2.picking.html
+++ b/elvis3d/exam.3.math/2.2.picking.html
@@ -9,13 +9,13 @@
 
     <title> picking </title>
 
-    <script src='../libs/jquery-2.0.3.min.js'></script>
+    <script src='../libs/extra/jquery-2.0.3.min.js'></script>
 
     <script src='../libs/threejs/three.js'></script>
-    <script src='../libs/threejs/CSS3DRenderer.js'></script>
-    <script src="../libs/ramb3d/core.js"></script>
+    <!--<script src='../libs/threejs/CSS3DRenderer.js'></script>-->
+    <script src="../libs/elvis5/core.js"></script>
 
-    <script src="js/controls/OrbitControls.js"></script>
+    <script src="../libs/threejs/js/controls/OrbitControls.js"></script>
 
 </head>
 <body style="margin: 0px;" >
