--- a/elvis3d/exam.3.math/3.sprite_pick.html
+++ b/elvis3d/exam.3.math/3.sprite_pick.html
@@ -40,40 +40,53 @@
         },
         setup : function() {
             var scope = this;
-            var raycaster = new THREE.Raycaster();
+            scope.raycaster = new THREE.Raycaster();
+            //var projector = new THREE.Projector();
 
-            //씬노드 추가
-            var geometry = new THREE.CubeGeometry(1,1,1);
-            var material = new THREE.MeshBasicMaterial(
-                    {
-                        color: 0x00ff00,
-                        wireframe : true
+            //그리드헬퍼
+            var helper =  new THREE.GridHelper( 3, 1 );
+            helper.setColors(0x00ff00,0xff0000);
+            this.scene.add(helper);
 
-                    }
-            );
+            var size = 48;
+            var text ="hello canvas";
+            var canvas = document.createElement("canvas");
+            canvas.width = 512;
+            canvas.height = 64;
 
-            var node = new THREE.Mesh(geometry, material);
-            this.test_cube = node;
-            this.scene.add(node);
+            var context = canvas.getContext("2d");
 
+            context.fillStyle = "rgba(255,255,255,1)";
+            context.fillRect(0, 0, canvas.width, canvas.height);
 
+            context.font = size + "pt Arial";
+            context.textAlign = "center";
+            context.textBaseline = "middle";
+            context.fillStyle = "rgba(255,0,0,1)";
+            context.fillText(text, canvas.width / 2, canvas.height / 2);
+            context.strokeStyle = "black";
+
+            var texture = new THREE.Texture(canvas);
+            texture.needsUpdate = true;
             var material = new THREE.MeshBasicMaterial({
-                wireframe : true
+                map : texture,
+                transparent : true //투명 컬러값 적용시킴
+
             });
-            var mesh = new THREE.Mesh(new THREE.PlaneGeometry(10,2), material);
 
-            mesh.doubleSided = true;
-            mesh.position.set(5,0,0)
+            //빌보드
+            var mesh = new THREE.Mesh(new THREE.PlaneGeometry(canvas.width/50, canvas.height/50), material);
+            // mesh.overdraw = true;
+            mesh.position.set(0,0,0)
             scope.scene.add(mesh);
-            this.plane_node = mesh;
-
+            scope.mesh_bill = mesh;
 
             //카메라의 현재 위치 기준으로 시작한다.
             var controls = new THREE.OrbitControls( this.camera );
             controls.target = new THREE.Vector3( 0, 0, 0 ); //바라보는 위치
             controls.update();
 
-            this.raycaster = raycaster;
+            //this.raycaster = raycaster;
 
         },
         event : {
@@ -88,25 +101,18 @@
                 });
             },
             onMouseDown : function(event) {
-
                 var mx = ( event.clientX / window.innerWidth ) * 2 - 1;
                 var my = - ( event.clientY / window.innerHeight ) * 2 + 1;
 
-                //2차원좌표를 3차원 점으로 만들기
-                var vector = new THREE.Vector3( mx, my, 0.5 ).unproject( this.camera );
 
-                //픽킹광선 만들기
-                this.raycaster.set( this.camera.position, vector.sub( this.camera.position ).normalize() );
 
-                console.log(this.raycaster);
-
-                var intersect = [];
-                //각 오브잭트별로 레이캐스트 함수가 있다 여기에 레이캐스터를 인자로 넣어서 충돌점을 구한다.
-                this.plane_node.raycast(this.raycaster,intersect);
-                console.log(intersect)
 
             },
             onUpdate : function(event) {
+
+                var scope = this;
+
+                scope.mesh_bill.quaternion.copy(scope.camera.quaternion)
 
                 Smgr.updateAll();
 
