--- a/elvis3d/exam.3.math/3.sprite_pick.html
+++ b/elvis3d/exam.3.math/3.sprite_pick.html
@@ -48,38 +48,116 @@
             helper.setColors(0x00ff00,0xff0000);
             this.scene.add(helper);
 
-            var size = 48;
-            var text ="hello canvas";
-            var canvas = document.createElement("canvas");
-            canvas.width = 512;
-            canvas.height = 64;
+            function makeTextBillboard(option) {
 
-            var context = canvas.getContext("2d");
+                var size = option.font_size;
+                var text = option.text;
 
-            context.fillStyle = "rgba(255,255,255,1)";
-            context.fillRect(0, 0, canvas.width, canvas.height);
+                var canvas = document.createElement("canvas");
+                canvas.width = option.canvas_width;
+                canvas.height = option.canvas_height;
 
-            context.font = size + "pt Arial";
-            context.textAlign = "center";
-            context.textBaseline = "middle";
-            context.fillStyle = "rgba(255,0,0,1)";
-            context.fillText(text, canvas.width / 2, canvas.height / 2);
-            context.strokeStyle = "black";
+                var context = canvas.getContext("2d");
 
-            var texture = new THREE.Texture(canvas);
-            texture.needsUpdate = true;
-            var material = new THREE.MeshBasicMaterial({
-                map : texture,
-                transparent : true //투명 컬러값 적용시킴
+                if(option.fillStyle) {
+                    //context.fillStyle = "rgba(255,255,255,1)";
+                    context.clearRect(0, 0, canvas.width, canvas.height);
+                    context.fillStyle = option.fillStyle;
+                    context.fillRect(0, 0, canvas.width, canvas.height);
+                }
 
-            });
+                context.font = size + "pt Arial";
+                context.textAlign = "center";
+                context.textBaseline = "middle";
+                context.fillStyle = "rgba(255,0,0,1)";
+                context.strokeStyle = "black";
+                context.fillText(text, canvas.width / 2, canvas.height / 2);
 
-            //빌보드
-            var mesh = new THREE.Mesh(new THREE.PlaneGeometry(canvas.width/50, canvas.height/50), material);
-            // mesh.overdraw = true;
-            mesh.position.set(0,0,0)
-            scope.scene.add(mesh);
-            scope.mesh_bill = mesh;
+
+                var texture = new THREE.Texture(canvas);
+                texture.needsUpdate = true; //텍스춰가 변경되면 매번 해주어야함
+                var material = new THREE.MeshBasicMaterial({
+                    map : texture,
+                    transparent : true //투명 컬러값 적용시킴
+
+                });
+
+
+                //빌보드
+                var geo = new THREE.PlaneGeometry(1,1)
+                var mesh = new THREE.Mesh(geo, material);
+                //canvas.width/50, canvas.height/50
+                // mesh.overdraw = true;
+                mesh.position.copy(option.position)
+                //mesh.name = 'bil1'
+                mesh.scale.set(canvas.width/50, canvas.height/50,1)
+
+                mesh.context2d = context;
+                mesh.canvas = canvas;
+                mesh.OnCallback = option.OnCallback.bind(mesh);
+                //scope.scene.add(mesh);
+                //scope.mesh_bill = mesh;
+
+                //
+                //this.billboards.push(mesh);
+
+                return mesh
+
+
+            }
+
+
+            this.billboards = [];
+
+            var node = makeTextBillboard({
+                text : 'billboard-1',
+                canvas_width : 512,
+                canvas_height : 64,
+                font_size : 48,
+                fillStyle : "rgba(255,255,255,1)",
+                position : new THREE.Vector3(0,0,0),
+                OnCallback : function (evt) {
+
+                    var context = this.context2d;
+                    var canvas = this.canvas;
+
+                    context.clearRect(0, 0, canvas.width, canvas.height);
+                    context.fillStyle = "rgba(255,0,255,1)";
+                    context.fillRect(0, 0, canvas.width, canvas.height);
+                    this.material.map.needsUpdate = true;
+                }
+
+            })
+
+            node.name = 'bil1';
+            this.billboards.push(node)
+            scope.scene.add(node);
+
+            node = makeTextBillboard({
+                text : 'billboard-2',
+                canvas_width : 512,
+                canvas_height : 64,
+                font_size : 48,
+                fillStyle : "rgba(255,255,255,1)",
+                position : new THREE.Vector3(0,2,0),
+                OnCallback : function (evt) {
+
+                    var context = this.context2d;
+                    var canvas = this.canvas;
+
+                    context.clearRect(0, 0, canvas.width, canvas.height);
+                    context.fillStyle = "rgba(255,0,255,1)";
+                    context.fillRect(0, 0, canvas.width, canvas.height);
+                    this.material.map.needsUpdate = true;
+
+                }
+            })
+
+            node.name = 'bil2';
+            this.billboards.push(node)
+            scope.scene.add(node);
+
+
 
             //카메라의 현재 위치 기준으로 시작한다.
             var controls = new THREE.OrbitControls( this.camera );
@@ -104,6 +182,25 @@
                 var mx = ( event.clientX / window.innerWidth ) * 2 - 1;
                 var my = - ( event.clientY / window.innerHeight ) * 2 + 1;
 
+                var vector = new THREE.Vector3( mx, my, 0.5 ).unproject( Smgr.camera );
+
+                this.raycaster.set( Smgr.camera.position, vector.sub( Smgr.camera.position ).normalize() );
+
+                var intersects = this.raycaster.intersectObjects(this.billboards  );
+
+                if ( intersects.length > 0 ) {
+
+                    console.log(intersects[ 0 ].object.name);
+                    intersects[ 0 ].object.OnCallback();
+                    //intersects[ 0 ].object.material = material_hit;
+
+                    //console.log(intersects.length)
+
+                }
+                else {
+
+                }
+
 
 
 
@@ -112,7 +209,11 @@
 
                 var scope = this;
 
-                scope.mesh_bill.quaternion.copy(scope.camera.quaternion)
+                for(var i=0;i<scope.billboards.length;i++) {
+                    scope.billboards[i].quaternion.copy(scope.camera.quaternion)
+
+                }
+                //scope.mesh_bill.quaternion.copy(scope.camera.quaternion)
 
                 Smgr.updateAll();
 
