--- a/elvis3d/exam.tween/3.control.html
+++ b/elvis3d/exam.tween/3.control.html
@@ -11,7 +11,7 @@
     <script src="../libs/extra/Tween.js"></script>
     <script src="../libs/threejs/js/controls/OrbitControls.js"></script>
 
-    <script src="../libs/ramb3d/core.js"></script>
+    <script src="../libs/elvis5/core.js"></script>
 
 </head>
 <body style="margin: 0px;" >
@@ -47,7 +47,7 @@
 
             //var texture;
             (new THREE.TextureLoader()).load(
-                    '../res/RTS_Crate.png',
+                    '../res/mil1.png',
                     function(texture) {
 
                         //repeate
